Adding support for @Replaces